Align to Java8 changes in Jena3